# pocketfin

./: README.md
agent/: pyproject.toml
agent/my_agent/: agent.py  demo.py
ui/: package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
